--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ authors = [
 license = {text = ""}
 
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    'pydub',
+    'pandas',
+    'polars',
+    'ffmpeg'
+]
 
 [tool.setuptools]
 include-package-data = true # default value
