--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     'pydub',
     'pandas',
     'polars',
-    'ffmpeg'
+    'ffmpeg',
+    'matplotlib',
+    'scikit-learn',
+    'numpy',
 ]
 
 [tool.setuptools]
