--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
     - -e .
     - click
     - coverage
-    - python-dotenv>=0.5.1
+    - python-dotenv
     - pydub
     - openai
   
