updated with visualisations with mappings to groups

--- a/resources/text_mappings.json
+++ b/resources/text_mappings.json
@@ -1,9 +1,17 @@
 {
-    "Positive Sentiment": "Pozytywny",
-    "negative": "Negatywny",
-    "Neutral Sentiment": "Neutralny",
-    "sentimental": "Sentymentalny",
-    "rather-positive": "Raczej Pozytywny",
     "classification.overall_sentiment": "Ogólny Ton Nagrania",
-    "Frequency": "Liczba Nagrań"
+    "Frequency": "Liczba Nagrań",
+    "classification.fairy_tale": "Bajka",
+    "classification.dad_love": "Miłość ojca",
+    "classification.dad_longing": "Tęsknota ojca",
+    "classification.mother_mentions": "Wzmianki o matce",
+    "classification.mother_family_mentions": "Wzmianki o rodzinie matki",
+    "classification.privacy_concern": "Obawy o prywatność",
+    "classification.privacy_concern_type": "Rodzaje Obaw o prywatność",
+    "classification.mother_family_mentions_sentiment": "Ton wzmianek o rodzinie matki",
+    "classification.mother_mentions_sentiment": "Ton wzmianek o matce",
+    "classification.dad_tale_main_theme": "Motyw przewodni bajek",
+    "classification.fairy_tale_theme": "Rodzaje bajek",
+    "classification.overall_mood": "Nastrój w jakim utrzymane są nagrania"
+    
 }
