updated mappings and report

--- a/resources/mother_mentions_sentiment_mappings.json
+++ b/resources/mother_mentions_sentiment_mappings.json
@@ -1,6 +1,6 @@
 {
     "Raczej Pozytywny": [
-        "Raczej Pozytywny"
+        "Raczej Pozytywny", "rather-positive"
     ],
     "Pozytywny": [
         "positive"
