--- a/resources/overall_mood_mappings.json
+++ b/resources/overall_mood_mappings.json
@@ -2,7 +2,7 @@
     "Czuły": [
         "affectionate", "caring", "busy but affectionate", "longing", "busy but affectionate", "warm", "thoughtful"
     ],
-    "Pozytywny": [
+    "Radosny": [
         "enthusiastic", "hopeful", "positive", "happy", "cheerful", "joyful", "motivational", "pedagogical", "affectionate and optimistic"
     ],
     "Refleksyjny": [
